--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,8 +2,10 @@ homepage: "https://jooble.org"
 documentation: "https://github.com/jooble-gtm-official/conversion-template#readme"
 versions:
   # Latest version
+  - sha: cf8146fd86f810c4afdca0d383f53effcad6dd4d
+    changeNotes: Always remove item from localStorage after conversion.
+  # Older versions
   - sha: 94d7038ed146d4900ad77b1dbca5d1c47a33a7d7
     changeNotes: Use gtmOnFailure method in case conversionUrl is empty.
-  # Older versions
   - sha: ecd45be902cb8719973cb16202030c4ae6ee0e1d
     changeNotes: Initial release.
